--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -49,7 +49,8 @@
         pnc: pnc,
         probationStatus: probationStatus,
         numberOfPossibleMatches: data.numberOfPossibleMatches,
-        breach: breach
+        breach: breach,
+        hideUnlinkButton: hideUnlinkButton
     }) }}
 
 {% endblock %}
@@ -58,8 +59,8 @@
 
     {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
     {{ govukBackLink({
-        text: "Back to cases",
-        href: '/cases/' + caseListDate
+        text: backText or "Back to cases",
+        href: backLink or '/cases/' + caseListDate
     }) }}
 
 {% endblock %}
