--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -7,7 +7,7 @@
           <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" type="submit">Link nDelius record</button>
         </form>
       </div>
-    {% elif params.probationStatus == 'Previously known' or 'Current' %}
+    {% elif params.crn | length %}
       <div class="pac-key-details-bar__right-block">
         <form method="get" action="/match/defendant/{{ params.caseNo }}/manual">
           <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" type="submit">Unlink nDelius record</button>
