--- a/server/views/components/match-confirmation/template.njk
+++ b/server/views/components/match-confirmation/template.njk
@@ -1,8 +1,10 @@
 {% if params.matchName %}
     {% if params.matchType === 'No record' %}
         {%- set messageText = 'You have successfully confirmed ' + params.matchName + ' has no nDelius record.' -%}
-    {% elseif params.matchType === 'linked' %}
+    {% elif params.matchType === 'linked' %}
         {%- set messageText = 'You have successfully linked an nDelius record to ' + params.matchName + '.' -%}
+    {% elif params.matchType === 'unlinked' %}
+        {%- set messageText = 'You have successfully unlinked an nDelius record from ' + params.matchName + '.' -%}
     {% else %}
         {%- set messageText = 'You have successfully confirmed a record for ' + params.matchName + '.' -%}
     {% endif %}
