:lipstick: Updated UI layout based on demo feedback
:clown_face: Include mock data for linking “Kara Ayers” to offener record
:mute: Removed console.log for offender details

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_key-details.scss
+++ b/public/stylesheets/app/_key-details.scss
@@ -2,8 +2,9 @@
   background-color: $govuk-brand-colour;
   
   &__right-block{
-    float: right;
-    @include govuk-clearfix();
+    position: absolute;
+    right: 0;
+    top: 32px;
   }
 
   &__top-block, &__bottom-block {
@@ -18,6 +19,7 @@
   }
 
   &__key-details {
+    position: relative;
     @include moj-width-container;
     margin: 0 auto;
     padding: 20px 0;
