:lipstick: PIC-679: prototype alignment changes

--- a/public/stylesheets/app/_key-details.scss
+++ b/public/stylesheets/app/_key-details.scss
@@ -13,6 +13,11 @@
     }
   }
 
+  &__bottom-block{
+    padding-top: 10px;
+    margin-top: 6px;
+  }
+
   &__key-details {
     @include moj-width-container;
     margin: 0 auto;
