Pic 679 prototype alignment (#144)
* :lipstick: PIC-679: prototype alignment changes

* :lipstick: PIC-679: prototype alignment changes

--- a/public/stylesheets/app/_key-details.scss
+++ b/public/stylesheets/app/_key-details.scss
@@ -1,6 +1,6 @@
 .pac-key-details-bar {
   background-color: $govuk-brand-colour;
-  
+
   &__right-block{
     position: absolute;
     right: 0;
@@ -14,8 +14,9 @@
     }
   }
 
-  &__bottom-block {
-    margin-top: 10px;
+  &__bottom-block{
+    padding-top: 10px;
+    margin-top: 6px;
   }
 
   &__key-details {
