--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -31,6 +31,12 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+                    <h1 class="govuk-heading-l">Probation record</h1>
+                </div>
+            </div>
+
             {% if activeOrders | length %}
                 <h2 class="govuk-heading-m">Current orders <span class="heading-count-order">({{ activeOrders | length }})</span></h2>
                 {%- for order in activeOrders %}
