Remove length in order requirements when unknown

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -56,7 +56,7 @@
                                 {{ requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description }}
                                 {{ '(' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' }}
                                 {{ '- ' + requirement.length if requirement.length }}
-                                {{ requirement.lengthUnit if requirement.lengthUnit }}
+                                {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
                             </li>
                         {% endfor %}
                         </ul>
