--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -54,9 +54,14 @@
                         {%- for requirement in order.requirements %}
                             <li>
                                 {{ requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description }}
-                                {{ '(' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' }}
-                                {{ '- ' + requirement.length if requirement.length }}
-                                {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
+                                {% if requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description === 'Rehabilitation Activity Requirement (RAR)' %}
+                                    {{ '- ' + requirement.length if requirement.length }}
+                                    {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
+                                {% else %}
+                                    {{ '(' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' }}
+                                    {{ '- ' + requirement.length if requirement.length }}
+                                    {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
+                                {% endif %}
                             </li>
                         {% endfor %}
                         </ul>
