:sparkles: Display no matching cases when filtered list is empty
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -216,7 +216,7 @@
             {{ govukTable(tableData) }}
         {% endblock %}
     {% else %}
-        <p class="govuk-body">No case data available for this day.</p>
+        <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "No case data available for this day." }}</p>
     {% endif %}
 
     {% if totalPages > 1 %}
