Correct the tests: unmatch offender manager section match last pre-sentence report and last OASys assessment

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -54,7 +54,7 @@
                         {%- for requirement in order.requirements %}
                             <li>
                                 {{ requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description }}
-                                {% if requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description === 'Rehabilitation Activity Requirement (RAR)' %}
+                                {% if (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) == 'Rehabilitation Activity Requirement (RAR)' %}
                                     {{ '- ' + requirement.length if requirement.length }}
                                     {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
                                 {% else %}
