:bug: PIC-473: Further changes to attendance view

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -25,6 +25,10 @@
   width: 55%;
 }
 
+.pac-\!-grid-column-18 {
+  width: 18%;
+}
+
 body.js-enabled {
   .moj-js-hidden {
     @include govuk-visually-hidden;
