Fix color dark-grey

--- a/public/stylesheets/app/_header.scss
+++ b/public/stylesheets/app/_header.scss
@@ -10,6 +10,6 @@
   text-decoration: underline !important;
 }
 
-.heading-count-order{
-  color: #505a5f;
+.pac-heading-count-order{
+  color: govuk-colour("dark-grey");
 }
