--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -54,14 +54,12 @@
                         {%- for requirement in order.requirements %}
                             <li>
                                 {{ requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description }}
-                                {% if (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) == 'Rehabilitation Activity Requirement (RAR)' %}
-                                    {{ '- ' + requirement.length if requirement.length }}
-                                    {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
-                                {% else %}
+                                {% if not (requirement.requirementTypeSubCategory.description !== "Rehabilitation Activity Requirement (RAR)") or (requirement.adRequirementTypeSubCategory.description !== "Rehabilitation Activity Requirement (RAR)") %}
                                     {{ '(' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' }}
-                                    {{ '- ' + requirement.length if requirement.length }}
-                                    {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
                                 {% endif %}
+                                {{ '- ' + requirement.length if requirement.length }}
+                                {{ requirement.lengthUnit if requirement.lengthUnit and requirement.length }}
+
                             </li>
                         {% endfor %}
                         </ul>
