Display officer manager only for current

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -36,11 +36,36 @@
 
 {%- set preciseDiff = params.preciseDiff -%}
 
+
+{# {% set RAR = "Rehabilitation Activity Requirement (RAR)" %}#}
+{#                                {{ requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description }}#}
+{#                                {% if not (requirement.requirementTypeSubCategory.description !== RAR) or (requirement.adRequirementTypeSubCategory.description !== RAR) %}#}
+{#                                    {{ '(' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' }}#}
+{#                                {% endif %}#}
+
+{#{ text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-table__cell'},#}
+
+{#{% filter replace("force", "forth") %}#}
+{#    may the force be with you#}
+{#{% endfilter %}#}
+
+    {% set RAR = "Rehabilitation Activity Requirement (RAR)" %}
 {%- for requirement in currentOrder.requirements %}
+
     {{ activeRequirementTableData.rows.push([
-        { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-table__cell'},
+        { text:
+            (requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description) +
+            ' (' + (
+            (requirement.requirementTypeSubCategory.description === RAR) or
+            (requirement.adRequirementTypeSubCategory.description === RAR) or
+            (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description))
+
+            + ')', classes: 'govuk-table__cell' },
+
         { text: requirement.length + ' ' + (requirement.lengthUnit) if requirement.length else 'Unavailable ', classes: 'govuk-table__cell' }
     ]) }}
+
+
     {{ inactiveRequirementTableData.rows.push([
         { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-table__cell govuk-!-width-one-half'},
         { text: requirement.length + ' ' + (requirement.lengthUnit) if requirement.length else 'Unavailable ', classes: 'govuk-table__cell govuk-!-width-one-quarter' },
