--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -105,10 +105,12 @@
         <div class="govuk-grid-column-one-third govuk-!-padding-left-9 govuk-!-padding-top-9">
             <div class="govuk-!-margin-bottom-6">
                 <h3 class="govuk-heading-s">Offender Manager</h3>
-                {% if offenderManager.allocatedDate %}
-                    <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.forenames }} {{ offenderManager.surname }}</p>
-                    <p class="govuk-hint govuk-!-margin-top-1">Allocated on {{ moment(offenderManager.allocatedDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
-                {% else %}
+                {% if data.probationStatus === "Current" %}
+                    {% if offenderManager.allocatedDate %}
+                        <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.forenames }} {{ offenderManager.surname }}</p>
+                         <p class="govuk-hint govuk-!-margin-top-1">Allocated on {{ moment(offenderManager.allocatedDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+                {% endif %}
+                    {% else %}
                     <p class="govuk-body">Not active</p>
                 {% endif %}
             </div>
