Fix bug of RAR duplication in the second screen of the probation record

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -36,38 +36,19 @@
 
 {%- set preciseDiff = params.preciseDiff -%}
 
-
-{# {% set RAR = "Rehabilitation Activity Requirement (RAR)" %}#}
-{#                                {{ requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description }}#}
-{#                                {% if not (requirement.requirementTypeSubCategory.description !== RAR) or (requirement.adRequirementTypeSubCategory.description !== RAR) %}#}
-{#                                    {{ '(' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' }}#}
-{#                                {% endif %}#}
-
-{#{ text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-table__cell'},#}
-
-{#{% filter replace("force", "forth") %}#}
-{#    may the force be with you#}
-{#{% endfilter %}#}
-
-    {% set RAR = "Rehabilitation Activity Requirement (RAR)" %}
+{% set RAR = "Rehabilitation Activity Requirement (RAR)" %}
 {%- for requirement in currentOrder.requirements %}
-
+    {% if (requirement.requirementTypeSubCategory.description === RAR) or (requirement.adRequirementTypeSubCategory.description === RAR) %}
+        {% set subCategory = "" %}
+    {% else %}
+        {% set subCategory = ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')' %}
+    {% endif %}
     {{ activeRequirementTableData.rows.push([
-        { text:
-            (requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description) +
-            ' (' + (
-            (requirement.requirementTypeSubCategory.description === RAR) or
-            (requirement.adRequirementTypeSubCategory.description === RAR) or
-            (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description))
-
-            + ')', classes: 'govuk-table__cell' },
-
+        { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + subCategory, classes: 'govuk-table__cell'},
         { text: requirement.length + ' ' + (requirement.lengthUnit) if requirement.length else 'Unavailable ', classes: 'govuk-table__cell' }
     ]) }}
-
-
     {{ inactiveRequirementTableData.rows.push([
-        { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-table__cell govuk-!-width-one-half'},
+        { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + subCategory, classes: 'govuk-table__cell govuk-!-width-one-half'},
         { text: requirement.length + ' ' + (requirement.lengthUnit) if requirement.length else 'Unavailable ', classes: 'govuk-table__cell govuk-!-width-one-quarter' },
         { text: moment(requirement.terminationDate, 'YYYY-MM-DD').format('D MMM YYYY') if requirement.terminationDate, classes: 'govuk-table__cell govuk-!-width-one-quarter' },
         { text: requirement.terminationReason.description if requirement.terminationReason.description, classes: 'govuk-table__cell govuk-!-width-one-quarter' }
